yanl/examples/t1/correct/explicit_cast.yanl
#explicit casts

program gigi;

var
        c:char;
        i:integer;
        b:boolean;
        r:real;

begin 
        r := (real)c;
        r := (real)r;
       
        b := (boolean)i;
        b := (boolean)b;
        
        c := (char)r;
        c := (char)i;
        c := (char)c;
        
        i := (integer)i;
        i := (integer)c;
        i := (integer)b;
        i := (integer)r;
end.