yanl/examples/t1/fail/0104_var_multiple_vars.yanl
program me;
var x:integer;
    y,z:integer;
    w:real;
    c:char;
var a, b:real;
var q, e:integer;
  i,j:boolean;
begin
end.
